# tasks_manager

./: README.md  docker-compose.yaml
environments/hightalent_reservation/: .env.production
frontend/: .env.development  .env.production  Dockerfile  README.md  frontend.rar  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.vue  icons.js
frontend/src/assets/: tailwind.css
frontend/src/components/: BaseAlert.vue  BaseIcon.vue  BasePage.vue  ButtonStateSidebar.vue  HeaderTimeAndDate.vue  Image.vue  Rectangle.vue  Sidebar.vue  SidebarCategory.vue  Success.vue  Tasks.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: HomePage.vue
tasks_manager/: .dockerignore  .env.production  .gitignore  Dockerfile  README.md  alembic.ini  pylintrc.txt  pyproject.toml
tasks_manager/app/: exceptions.py  main.py  settings.py  unitofwork.py  utils.py
tasks_manager/app/api/: dependencies.py  routers.py
tasks_manager/app/database/: __init__.py  base.py  connection.py  repository.py
tasks_manager/app/migrations/: env.py
tasks_manager/app/migrations/versions/: 1d486b8dbcb7_.py  5e34c220b5ec_.py  c8e1a264ef13_.py
tasks_manager/app/modules/baffler/: router.py  service.py  uow.py
tasks_manager/app/modules/baffler/models/: tasks.py
tasks_manager/app/modules/baffler/schemas/: payload.py
tasks_manager/app/modules/reservation/: router.py  service.py  uow.py
tasks_manager/app/modules/reservation/models/: tables.py
tasks_manager/app/modules/reservation/schemas/: payload.py
